# XRT

src/runtime_src/: CMakeLists.txt
src/runtime_src/core/edge/ps_kernels/profiling/: CMakeLists.txt
src/runtime_src/core/edge/ps_kernels/profiling/aie2_trace_config/: CMakeLists.txt  aie2_trace_config.cpp  aie2_trace_util.cpp  aie2_trace_util.h  event_configuration.h
src/runtime_src/core/edge/ps_kernels/profiling/aie_trace_config/: CMakeLists.txt  aie_trace_config.cpp  aie_trace_config_kernel.cpp  event_configuration.h
src/runtime_src/driver/xclng/xrt/user_gem/: perf.cpp
src/runtime_src/xdp/: CMakeLists.txt
src/runtime_src/xdp/profile/core/: summary_writer.cpp
src/runtime_src/xdp/profile/database/: dynamic_event_database.cpp  dynamic_event_database.h
src/runtime_src/xdp/profile/database/dynamic_info/: aie_db.h  device_db.h  types.h
src/runtime_src/xdp/profile/database/static_info/: aie_constructs.h
src/runtime_src/xdp/profile/device/: tracedefs.h
src/runtime_src/xdp/profile/plugin/aie_debug/: aie_debug_metadata.cpp
src/runtime_src/xdp/profile/plugin/aie_profile/: CMakeLists.txt  aie_profile_defs.h  aie_profile_metadata.cpp  aie_profile_metadata.h  aie_profile_plugin.cpp
src/runtime_src/xdp/profile/plugin/aie_profile/client/: aie_profile.cpp
src/runtime_src/xdp/profile/plugin/aie_trace/: CMakeLists.txt  aie_trace_plugin.cpp
src/runtime_src/xdp/profile/plugin/ocl/: ocl_profiler.cpp  ocl_profiler.h  xocl_profile.cpp  xocl_profile.h  xocl_profile_cb.cpp
src/runtime_src/xdp/profile/plugin/xma/: xma_plugin.cpp  xma_plugin.h  xma_profiler.cpp  xma_profiler.h
src/runtime_src/xocl/api/: clEnqueueNDRangeKernel.cpp
src/runtime_src/xocl/api/plugin/xdp/: profile.cpp  profile.h
src/xma/: CMakeLists.txt
src/xma/include/lib/: xmaapi.h  xmacfg.h  xmahw.h  xmahw_private.h  xmalimits.h
src/xma/src/xmaapi/: CMakeLists.txt  xmaapi.c  xmacfg.c  xmahw.c  xmahw_hal.cpp
src/xma/src/xmaplugin/: xmaplugin.cpp
tests/xma/profiling/: common.mk
tests/xma/profiling/02_simple_xma/: main.cpp
tests/xma/profiling/03_loopback_xma/: main.cpp
tests/xma/profiling/100_ert_ncu_xma/: main.cpp
(+25 files in other folders)
